--- a/src/stylesheets/navbar.css
+++ b/src/stylesheets/navbar.css
@@ -91,6 +91,8 @@
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   animation: slide-in 0.4s ease-in;
+  display: none;
+  z-index: 10;
 }
 
 .secondary-nav ul {
